# aoc

./: Cargo.toml
aoc2018/: Cargo.toml
aoc2018/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day5.rs  day6.rs  main.rs
aoc2019/: Cargo.toml
aoc2019/input/: day18.txt  day18_2.txt  day24.txt
aoc2019/src/: day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  intcode.rs  main.rs  template.rs
aoc2020/: Cargo.toml
aoc2020/input/: day23.txt
aoc2020/src/: day01.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day09.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day4.rs  day5.rs  day6.rs  day8.rs  day9.rs  main.rs  template.rs
aoc2021/: Cargo.toml
aoc2021/src/: day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  template.rs
aoc2022/: Cargo.toml
aoc2022/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  main.rs
aoc2023/: Cargo.toml
aoc2023/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  main.rs
aoc2024/: Cargo.toml
aoc2024/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day17.rs  main.rs  template.rs
aoc2025/: Cargo.toml
aoc2025/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  grid.rs  (+2 more)
