[package]
name = "aoc2"
version = "0.1.0"
authors = ["Mitch Souders <mitch.souders@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
serde_scan = "0.4.1"
serde = { version="1", features = ["derive"]}
regex = "1.3.1"
cgmath = "0.17.0"
num = "0.2.0"
enum-primitive-derive = "0.1.2"
num-derive = "0.3.0"
num-traits = "0.2.10"
petgraph = "0.4.13"
num-bigint = "0.3.1"
