[package]
name = "aoc2"
version = "0.1.0"
authors = ["Mitch Souders <mitch.souders@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
serde_scan = "0.4.1"
serde = { version="1", features = ["derive"]}
regex = "1.11.1"
cgmath = "0.18.0"
num = "0.4.3"
enum-primitive-derive = "0.3.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
petgraph = "0.6.5"
num-bigint = "0.4.6"
