[package]
name = "aoc2024"
version = "0.1.0"
authors = ["Mitch Souders <mitch.souders@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
serde_scan = "0.4.1"
serde = { version = "1.0.215", features = ["derive"] }
regex = "1.11.1"
cgmath = "0.18.0"
num = "0.4.3"
enum-primitive-derive = "0.3.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
petgraph = "0.6.5"
clap = {version="4.5.21", features=["derive"]}
derive_more = {version="1.0.0", features=["full"]}
rayon = "1.10.0"
nom = "7.1.3"
nalgebra = "0.33.2"
